--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -13,12 +13,12 @@ env:
   BUILD_NAME:     ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
   BUILD_NUMBER:   ${{ vars.BUILD_NUMBER || github.run_id }}
   DOCKER_REPO:    ${{ vars.DOCKER_REPO  || 'notes-api-docker-repo' }}
-  JF_REGISTRY:    ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}  # host only
-  CURATED_PYPI_VIRTUAL: ${{ vars.CURATED_PYPI_VIRTUAL || 'notes-api-pypi-curated' }}  # <-- fixed name
+  JF_REGISTRY:    ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}   # host only
+  CURATED_PYPI_VIRTUAL: ${{ vars.CURATED_PYPI_VIRTUAL || 'notes-api-pypi-curated' }}
   FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}  # none|low|medium|high|critical
   XRAY_FORMAT: table
 
-  # Nice-to-haves for cleaner logs
+  # Cleaner logs
   JFROG_CLI_LOG_LEVEL: ERROR
   JFROG_CLI_ENV_EXCLUDE: "*password*;*secret*;*key*;*token*;*auth*;JF_ARTIFACTORY_*;JF_ENV_*;JF_URL;JF_USER;JF_PASSWORD;JF_ACCESS_TOKEN"
   JFROG_CLI_OFFER_CONFIG: "false"
@@ -26,7 +26,6 @@ env:
 jobs:
   build-scan-and-publish:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,9 +33,9 @@ jobs:
       - name: Setup JFrog CLI (OIDC)
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}                    # e.g., https://aboavent.jfrog.io
+          JF_URL: ${{ vars.JF_URL }}
         with:
-          oidc-provider-name: github-oidc-integration   # must exist in JFrog
+          oidc-provider-name: github-oidc-integration
 
       - name: "Sanity: show effective settings"
         shell: bash
@@ -44,7 +43,7 @@ jobs:
           set -euo pipefail
           echo "DOCKER_REPO=${{ env.DOCKER_REPO }}"
           echo "CURATED_PYPI_VIRTUAL=${{ env.CURATED_PYPI_VIRTUAL }}"
-          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type}'
+          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type}' || true
           {
             echo "### JFrog Settings"
             echo "- **JF_URL**: \`${{ vars.JF_URL }}\`"
@@ -52,24 +51,21 @@ jobs:
             echo "- **CURATED_PYPI_VIRTUAL**: \`${{ env.CURATED_PYPI_VIRTUAL }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
-      # ---------- Configure pip to use curated PyPI (global is fine in CI) ----------
-      - name: Configure pip for curated PyPI
+      # ---------- Curation (pip) ----------
+      - name: Configure pip to resolve via curated PyPI (project)
         shell: bash
         run: |
           set -euo pipefail
-          # The setup-jfrog-cli action creates a server with this ID:
-          SERVER_ID="setup-jfrog-cli-server"
-          jf pip c --global --server-id-resolve "${SERVER_ID}" --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}"
-          # Show effective pip config (redacted)
-          echo "Pip configured for curated repo: ${{ env.CURATED_PYPI_VIRTUAL }}"
+          # You can use either 'jf pip-config' or the alias 'jf pip c'
+          jf pip-config \
+            --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
+            --server-id-resolve "setup-jfrog-cli-server" \
+            --global=false
+          find .jfrog -maxdepth 3 -type f -print || true
 
-      # ---------- Curation audit (blocks disallowed packages) ----------
       - name: Curation audit (requirements.txt)
         shell: bash
-        run: |
-          set -euo pipefail
-          echo "Auditing with Curation: requirements.txt"
-          jf curation-audit --requirements-file requirements.txt --format table || true
+        run: jf curation-audit --requirements-file requirements.txt --format table || true
 
       # ---------- Source scan: SAST / Secrets / IaC (non-blocking) ----------
       - name: Scan repository (non-blocking)
@@ -87,10 +83,9 @@ jobs:
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
       - name: Build image
-        run: |
-          docker build -t "${{ steps.tags.outputs.ref_tag }}" .
+        run: docker build -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Local image scan (Xray) ----------
+      # ---------- Local Xray scan of image (non-blocking) ----------
       - name: Xray image scan (non-blocking)
         shell: bash
         run: |
@@ -105,7 +100,7 @@ jobs:
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         shell: bash
         run: |
-          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
+          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCTOR_REPO || env.DOCKER_REPO }}" \
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
       # ---------- Publish build-info ----------
@@ -130,7 +125,7 @@ jobs:
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
           fi
 
-      # ---------- Summarize in job summary ----------
+      # ---------- Summary ----------
       - name: Summarize Xray build scan in job summary
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
