--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -10,40 +10,49 @@ permissions:
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME:     ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER || github.run_id }}
-  DOCKER_REPO:    ${{ vars.DOCKER_REPO  || 'notes-api-docker-repo' }}
-  JF_REGISTRY:    ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}   # host only
+  BUILD_NAME: ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER: ${{ vars.BUILD_NUMBER || github.run_id }}
+
+  # Artifactory / repos
+  DOCKER_REPO: ${{ vars.DOCKER_REPO  || 'notes-api-docker-repo' }}
+  JF_REGISTRY: ${{ vars.JF_REGISTRY  || 'aboavent.jfrog.io' }}         # host only
   CURATED_PYPI_VIRTUAL: ${{ vars.CURATED_PYPI_VIRTUAL || 'notes-api-pypi-curated' }}
-  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}  # none|low|medium|high|critical
+
+  # Xray behavior
+  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}              # none|low|medium|high|critical
   XRAY_FORMAT: table
 
-  # Cleaner logs
+  # Quieter CLI logs + nice command summary
   JFROG_CLI_LOG_LEVEL: ERROR
   JFROG_CLI_ENV_EXCLUDE: "*password*;*secret*;*key*;*token*;*auth*;JF_ARTIFACTORY_*;JF_ENV_*;JF_URL;JF_USER;JF_PASSWORD;JF_ACCESS_TOKEN"
-  JFROG_CLI_OFFER_CONFIG: "false"
 
 jobs:
   build-scan-and-publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v4
 
-      - name: Setup JFrog CLI (OIDC)
+      - name: "Setup JFrog CLI (OIDC)"
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}
+          JF_URL: ${{ vars.JF_URL }}                       # e.g., https://aboavent.jfrog.io
         with:
           oidc-provider-name: github-oidc-integration
+
+      - name: "Ensure jq is available"
+        shell: bash
+        run: |
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update -y && sudo apt-get install -y jq
+          fi
 
       - name: "Sanity: show effective settings"
         shell: bash
         run: |
           set -euo pipefail
           echo "DOCKER_REPO=${{ env.DOCKER_REPO }}"
-          echo "CURATED_PYPI_VIRTUAL=${{ env.CURATED_PYPI_VIRTUAL }}"
-          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type}' || true
+          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type,repositories,defaultDeploymentRepo}'
           {
             echo "### JFrog Settings"
             echo "- **JF_URL**: \`${{ vars.JF_URL }}\`"
@@ -52,28 +61,32 @@ jobs:
           } >> "$GITHUB_STEP_SUMMARY"
 
       # ---------- Curation (pip) ----------
-      - name: Configure pip to resolve via curated PyPI (project)
+      - name: "Configure pip to resolve via curated PyPI (project)"
         shell: bash
         run: |
           set -euo pipefail
-          # You can use either 'jf pip-config' or the alias 'jf pip c'
           jf pip-config \
             --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
             --server-id-resolve "setup-jfrog-cli-server" \
             --global=false
           find .jfrog -maxdepth 3 -type f -print || true
 
-      - name: Curation audit (requirements.txt)
+      - name: "Curation audit (requirements.txt)"
         shell: bash
         run: jf curation-audit --requirements-file requirements.txt --format table || true
 
-      # ---------- Source scan: SAST / Secrets / IaC (non-blocking) ----------
-      - name: Scan repository (non-blocking)
+      # NEW: generate a Curation UI event so it appears under Curation → Audit Events
+      - name: "Curation UI event (download via curated PyPI)"
         shell: bash
-        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
+        run: |
+          set -euo pipefail
+          mkdir -p .curation-cache
+          python -m pip download -r requirements.txt \
+            -i "${{ vars.JF_URL }}/artifactory/api/pypi/${{ env.CURATED_PYPI_VIRTUAL }}/simple" \
+            --dest .curation-cache || true
 
       # ---------- Build Docker image ----------
-      - name: Compose image tag
+      - name: "Compose image tag"
         id: tags
         shell: bash
         run: |
@@ -82,54 +95,55 @@ jobs:
           REF_TAG="${{ env.JF_REGISTRY }}/${{ env.DOCKER_REPO }}/${NAME}:${SAFE_BRANCH}"
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
-      - name: Build image
-        run: docker build -t "${{ steps.tags.outputs.ref_tag }}" .
+      - name: "Build image (local)"
+        shell: bash
+        run: |
+          docker build -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Local Xray scan of image (non-blocking) ----------
-      - name: Xray image scan (non-blocking)
+      # ---------- Image scan (local daemon) ----------
+      - name: "Xray image scan (local)"
         shell: bash
         run: |
           set -euo pipefail
           echo "Scanning local image: ${{ steps.tags.outputs.ref_tag }}"
           jf docker scan "${{ steps.tags.outputs.ref_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
 
-      # ---------- Push & record build-info (ref tag only) ----------
-      - name: Push image & record build-info (ref tag)
+      # ---------- Push & record build-info ----------
+      - name: "Push image & record build-info (ref tag only)"
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         shell: bash
         run: |
-          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCTOR_REPO || env.DOCKER_REPO }}" \
+          jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
       # ---------- Publish build-info ----------
-      - name: Publish build-info
+      - name: "Publish build-info"
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
         run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
       # ---------- Xray Build Scan (policy-gated) ----------
-      - name: Scan published build (policy-gated)
+      - name: "Scan published build (policy-gated)"
         env:
-          BUILD_NAME:   ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+          BUILD_NAME:       ${{ env.BUILD_NAME }}
+          BUILD_NUMBER:     ${{ env.BUILD_NUMBER }}
           FAIL_ON_SEVERITY: ${{ env.FAIL_ON_SEVERITY }}
         shell: bash
         run: |
-          set -euo pipefail
           if [ "${FAIL_ON_SEVERITY}" = "none" ]; then
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" || true
           else
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
           fi
 
-      # ---------- Summary ----------
-      - name: Summarize Xray build scan in job summary
+      - name: "Summarize Xray build scan in job summary"
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+        shell: bash
         run: |
           set -euo pipefail
           jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --format simple-json | tee scan.json || true
